Fix nested containers not showing data

--- a/app/components/OutputPresentation/OutputPresentation.module.css
+++ b/app/components/OutputPresentation/OutputPresentation.module.css
@@ -6,6 +6,7 @@
 
   .value {
     overflow-wrap: break-word;
+    white-space: pre-wrap;
   }
 
   &[data-variant='inline'] {
